# calc

./: .gitignore  CMakeLists.txt  README.md  calc-script.sln  calc-script.vcxproj  calc-script.vcxproj.filters  natvis-file.natvis  test.il
docs/: calc.components.txt
docs/snippets/: calculator.calc  circles.calc  factorial.calc  fibonacci.calc  quicksort.calc
docs/syntax/: functions.md
grammar/: for.g  goto.g  if-else.g  switch-case.g  while.g
include/: calc-liber.h  calc-parse.h  calc-parse.inc
include/calc/ast/: decl.h  expr.h  prgm.h  stmt.h  term.h
include/calc/base/: hash.h  stdbuf.h  stdch.h  stddef.h  stderr.h  stdin.h  stdmem.h  stdout.h  stdstr.h  stdtab.h  stdty.h  types.h
include/calc/lex/: lexer.h  scanner.h  source.h  tokens.h
include/calc/parse/: eval.h  parser.h
lib/: CMakeLists.txt  calc-liber.c
lib/ast/: CMakeLists.txt  expr.c  prgm.c  stmt.c  term.c
lib/base/: CMakeLists.txt  hash.c  stddef.c  stderr.c  stdmem.c  stdout.c  stdstr.c  stdty.c
lib/lex/: CMakeLists.txt
lib/parse/: CMakeLists.txt
new/: calc-liber.c  calc-liber.h  calc-parse.c  calc-parse.h  calc-parse.inc
old/: calc-build-cil.inc  calc-liber.c  calc-liber.h  calc-parse.inc  calc-script.c  calc-scrpt.c  calc-shell.h  calc-virtm.h  calc.c
scripts/: gensep.py
src/: CMakeLists.txt  calc-build-cil.inc  calc-build.c  calc-build.h  calc-liber.c  calc-liber.h  calc-liber.inc  calc-parse.c  calc-parse.h  calc-parse.inc  calc-scrpt.c  calc-scrpt.h  calc-shell.c  calc-shell.h  calc-virtm.c  calc-virtm.h  calc.c  calc.h
tests/: CMakeLists.txt  complex.calc  fib.calc  gcd.calc  hanoi.calc  hash_table.calc  helloworld.calc  in.calc  main.c  sum.calc
tests/features/: templates.calc  types.calc
utils/vscode-calc/: README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
utils/vscode-calc/syntaxes/: calc.tmLanguage.json
