set(_CMAKE_IMPORT_LIBRARY_PREFIX ${CMAKE_IMPORT_LIBRARY_PREFIX})
set(_CMAKE_SHARED_LIBRARY_PREFIX ${CMAKE_SHARED_LIBRARY_PREFIX})
set(_CMAKE_STATIC_LIBRARY_PREFIX ${CMAKE_STATIC_LIBRARY_PREFIX})

set(CMAKE_IMPORT_LIBRARY_PREFIX "${CMAKE_IMPORT_LIBRARY_PREFIX}lib-")
set(CMAKE_SHARED_LIBRARY_PREFIX "${CMAKE_SHARED_LIBRARY_PREFIX}lib-")
set(CMAKE_STATIC_LIBRARY_PREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}lib-")

add_subdirectory("base")
add_subdirectory("lex")
add_subdirectory("ast")
add_subdirectory("parse")

set(CMAKE_IMPORT_LIBRARY_PREFIX ${_CMAKE_IMPORT_LIBRARY_PREFIX})
set(CMAKE_SHARED_LIBRARY_PREFIX ${_CMAKE_SHARED_LIBRARY_PREFIX})
set(CMAKE_STATIC_LIBRARY_PREFIX ${_CMAKE_STATIC_LIBRARY_PREFIX})

set(CALC_SUBLIBS
	"base"
	"lex"
	"ast"
	"parse"
)

if(NOT CALC_BUILD_DYNAMIC_LIBRARY)
	add_library(lib INTERFACE)
	target_link_libraries(lib INTERFACE ${CALC_SUBLIBS})
endif()

install(TARGETS ${CALC_SUBLIBS} DESTINATION "out/lib")
